# releases

./: .gitattributes  .release-notes-0.7.10.md  .release-notes-0.7.11.md  .release-notes-0.7.12.md  .release-notes-0.7.13.md  .release-notes-0.7.2.md  .release-notes-0.7.3.md  .release-notes-0.7.5.md  .release-notes-0.7.6.md  .release-notes-0.7.7.md  .release-notes-0.7.8.md  .release-notes-0.7.9.md  LICENSE  README.md  RELEASING.md  build-config.json
.github/workflows/: build-android-demo.yml  build-android.yml  build-release.yml  build-static-main.yml  build-static.yml  debug-true-async.yml  debug-windows-build.yml  docker.yml  test-installer-wizard.yml  test-macos-installer.yml
demo/android/: .gitignore  gradle.properties  prepare.sh  settings.gradle.kts
demo/android/app/: build.gradle.kts
demo/android/app/src/main/: AndroidManifest.xml
demo/android/app/src/main/cpp/: CMakeLists.txt  php_bridge.c
demo/android/app/src/main/kotlin/com/trueasync/demo/: MainActivity.kt  PhpBridge.kt
demo/android/app/src/main/res/layout/: activity_main.xml
demo/android/app/src/main/res/values/: strings.xml  themes.xml
docker/: Dockerfile.alpine  Dockerfile.android  Dockerfile.debian  Dockerfile.frankenphp
docker/frankenphp/: Caddyfile  async_entrypoint.php
installer/: build-linux.sh  build-macos.sh  install.ps1  install.sh
installer/tests/: run-wizard-cases.sh  wizard-harness.sh
scripts/: android-cross.cache  android_compat.h  build-android.sh  build-linux.sh  build-windows.ps1  generate-checksums.sh
